data persistency on the server side